// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckBox Component should render with icon and checked 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  style={
    Array [
      Object {
        "margin": 5,
        "marginLeft": 10,
        "marginRight": 10,
        "padding": 10,
      },
      undefined,
      Object {
        "backgroundColor": "red",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
        false,
        false,
      ]
    }
  >
    <Icon
      allowFontScaling={false}
      color="#bfbfbf"
      name="square-o"
      size={24}
      style={
        Object {
          "minWidth": 24,
        }
      }
    />
  </View>
</TouchableOpacity>
`;

exports[`CheckBox Component should render with icon and iconRight 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  rigth={true}
  style={
    Array [
      Object {
        "margin": 5,
        "marginLeft": 10,
        "marginRight": 10,
        "padding": 10,
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
        false,
        Object {
          "justifyContent": "center",
        },
      ]
    }
  >
    <Icon
      allowFontScaling={false}
      color="blue"
      name="square-o"
      size={24}
      style={
        Object {
          "minWidth": 24,
        }
      }
    />
  </View>
</TouchableOpacity>
`;

exports[`CheckBox Component should render without issues 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  style={
    Array [
      Object {
        "margin": 5,
        "marginLeft": 10,
        "marginRight": 10,
        "padding": 10,
      },
      undefined,
      undefined,
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
        },
        false,
        false,
      ]
    }
  >
    <Icon
      allowFontScaling={false}
      color="#bfbfbf"
      name="square-o"
      size={24}
      style={
        Object {
          "minWidth": 24,
        }
      }
    />
  </View>
</TouchableOpacity>
`;
